# RusticSOM

./: Cargo.toml
outputs/: format_large.r
src/: lib.rs
src/functions/: decay.rs  distance.rs  mod.rs  neighbourhood.rs
tests/: test.rs  test_distributions.rs  test_json.rs  test_large.rs  test_supervised.rs
