[package]
name = "rusticsom"
version = "1.1.1"
authors = ["Avinash Shenoy <avi123shenoy@hotmail.com>", "Aditi Srinivas <aditisrinivas97@gmail.com>"]
license = "MIT"
repository = "https://github.com/avinashshenoy97/RusticSOM"
readme = "README.md"
description = "Rust library for Self Organising Maps (SOM)."
keywords = ["SOM", "ML", "self-organizing-map"]
categories = ["machine-learning"]
exclude = [".DS_Store"]
edition = "2018"

[dependencies]
approx = "*"
rand = "0.7"
ndarray = { version = "0.13", features = ["serde-1", "approx"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
csv = "1.1"
stopwatch = "0.0.7"

[dev-dependencies]
criterion = "0.3"
